# sql-engine

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: database.rs  lib.rs  main.rs
src/executor/: aggregation.rs  empty.rs  expression.rs  filter.rs  limit.rs  mod.rs  nested_join.rs  projection.rs  scan.rs
src/optimizer/: mod.rs
src/parser/: mod.rs
src/planner/: mod.rs
src/storage/: mod.rs  parquet.rs
src/types/: error.rs  mod.rs
tests/: aggregate_test.rs  expression_test.rs  filter_test.rs  having_test.rs  join_test.rs  limit_test.rs
tests/common/: mod.rs
tests/resources/data/: animals1.parquet  animals2.parquet  movies1.parquet  movies2.parquet
tests/resources/sql/: aggregates.slt  aggregates2.slt  aggregates3.slt  aggregates4.slt  binary_operators.slt  cartesian.slt  expression.slt  filter.slt  having.slt  inner_join.slt  join.slt  limit.slt  unary_operators.slt
