[package]
name = "sqlengine"
version = "0.1.0"
edition = "2021"

[lib]
name = "sqlengine"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parquet = "42.0.0"
rustyline = "12.0.0"
sqllogictest = "0.14.0"
sqlparser = "0.35.0"
tabled = "0.12.2"
